JJDZR13AT-menu_2, reservation addition is not working